# media-stitch

./: .gitignore  README.md  agents.md  pyproject.toml  skills-lock.json  task1-fix-report.md  task1-implementer-report.md  task1-quality-review.md  task1-spec-review.md  task2-implementer-report.md  task2-quality-review.md  task2-spec-review.md  task3-implementer-report.md  task3-quality-review.md  task3-spec-review.md  task4-implementer-report.md  task5-implementer-report.md  task6-implementer-report.md  task6-quality-review.md  task6-spec-review.md
docs/superpowers/plans/: 2026-04-27-photo-walk-metadata.md  2026-04-27-timestamp-sync.md  2026-04-27-video-stitcher.md  2026-04-27-video-trim-timestamp-sync.md  (+12 more)
src/photowalk/: __init__.py  api.py  catalog.py  cli.py  collector.py  constants.py  extractors.py  ffmpeg_config.py  formatters.py  image_clip.py  models.py  offset.py  offset_detector.py  parsers.py  photo_extractors.py  stitcher.py  timeline.py  writers.py
tests/: __init__.py  test_api.py  test_cli.py  test_cli_fix_trim.py  test_cli_stitch.py  test_cli_sync.py  test_collector.py  test_constants.py  test_extractors.py  test_ffmpeg_config.py  test_formatters.py  test_image_clip.py  test_models.py  test_offset.py  test_offset_detector.py  test_parsers.py  test_photo_extractors.py  test_stitcher.py  test_timeline.py  test_web_file_entry.py  test_web_server.py  test_web_stitch.py  test_web_sync_apply.py  test_web_sync_endpoints.py  test_web_sync_preview.py  test_web_sync_then_stitch.py  test_writers.py
tests/fixtures/: ffprobe_photo.json  ffprobe_video.json
(+57 files in other folders)
